[package]
name = "gas"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.14.0", features = ["full"] }
anyhow = "1.0.95"
async-trait = "0.1.88"
clap = { version = "4.5.27", features = ["derive"] }
colored = "3.0.0"
futures = "0.3.31"
lazy_static = "1.5.0"
rand = "0.9.0"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
thiserror = "2.0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
ratatui = "0.29.0"
crossterm = "0.29.0"
num-format = "0.4.4"
